# movies_db

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  constants.ts  index.tsx
frontend/src/components/: FilterDropdown.tsx  Home.tsx  MovieItem.tsx  MovieList.tsx  MovieListContainer.tsx  Navbar.tsx  Pagination.tsx  Visualization.tsx  components.css  example.tsx
frontend/src/queries/: fetchMoviesList.tsx
handlers/: GET_handlers.py  errors.py  utilities.py
